--- a/app/scss/map.scss
+++ b/app/scss/map.scss
@@ -30,7 +30,7 @@
 }
 
 .map-data {
-  padding-top: 1.5em;
+  padding-top: 1em;
   color: $charcoal;
 }
 
@@ -45,7 +45,7 @@
 }
 
 #sidebar-content-container {
-  padding: 1.5em 1.5em 0 1.5em;
+  padding: 1em 1.5em 0 1.5em;
 }
 
 #features {
